# flake8-github-annotations

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/flake8_github_annotations/: __about__.py  __init__.py  formatter.py
tests/: test_entrypoint.py
tests/integration/: test_cli_output.py
